--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@ body::before{
       max-width:400px;
   }
   .third{
-    height:100vh;
+    height:100%;
     padding-top:60px;
     background:linear-gradient(#7e0030, #f70202);
 }
@@ -210,6 +210,50 @@ body::before{
         height:100px;
     }
 }
+
+  .user-review {
+    text-align: center;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 100, 0.2);
+    padding-bottom: 50px;
+  }
+  .user-review p {
+    padding: 50px 10px 10px 10px;
+  }
+  .users-feedback img {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    position: relative;
+    margin: -30px 0 20px ;
+  }
+  .user-review p::before {
+    content: "\201d";
+    display: block;
+    max-height:120px;
+    /* position: absolute; */
+    font-size: 120px;
+    color: #6495ed;
+    font-family: sans-serif;
+     position: relative;
+    /* left: 50%; */
+    /* top: -20px; */
+  }
+  .footer {
+    padding: 100px 20px 15px;
+    background-image: linear-gradient(#2d557d, #9610fb);
+    color: white;
+  }
+  .footer hr {
+    margin-top: 10px;
+    background: #efefef;
+  }
+  .footer .copyright p {
+    text-align: center;
+  }
+  .bi-arrow-up-circle{
+      font-size:30px;
+  }
+  
 .fourth{
     height:100vh;
     padding-top:60px;
